# hse-tbank-research-llms

./: .gitignore
dz1/: .gitignore  README.md  pyproject.toml
dz1/artifacts/bc/: artifacts_overview.csv  expert_dataset.json  expert_dataset.npz  suite_summary.json
dz1/artifacts/bc/bc_main/: best.pt  metrics.csv  summary.json
dz1/artifacts/bc/coverage_10/: best.pt  metrics.csv  summary.json
dz1/artifacts/bc/coverage_100/: best.pt  metrics.csv  summary.json
dz1/artifacts/bc/coverage_30/: best.pt  metrics.csv  summary.json
dz1/artifacts/bc/coverage_50/: best.pt  metrics.csv  summary.json
dz1/artifacts/bc/failure_experiments/: coverage_10.npz  coverage_100.npz  coverage_30.npz  coverage_50.npz  coverage_vs_performance.csv  distribution_shift.csv  error_compounding.csv  narrow_dataset.npz  summary.json
dz1/artifacts/bc/narrow_state_train/: best.pt  metrics.csv  summary.json
dz1/artifacts/rl/: best_expert.pt  combined_metrics.csv  experiment_summary.csv  ranking.csv
dz1/artifacts/rl/vpg_rloo_seed0/: best.pt  (+3 more)
dz1/configs/: bc_balanced.yaml  bc_smoke.yaml  rl_balanced.yaml  rl_smoke.yaml
dz1/report/: report.md
dz1/report/assets/: bc_main_summary.csv  rl_experiment_summary.csv  rl_final_table.csv
dz1/scripts/: __init__.py  make_report_artifacts.py  run_bc_suite.py  run_full_pipeline.py  run_rl_suite.py
dz1/src/: __init__.py  config.py  envs.py  models.py
dz1/src/bc/: __init__.py  dataset.py  experiments.py  train_bc.py
dz1/src/rl/: __init__.py  evaluate.py  losses.py  returns.py  train_pg.py
dz1/src/utils/: __init__.py  logging.py  plotting.py
(+103 files in other folders)
